Added touch panning and zooming for map display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,5 @@
     <string name="no_current_position_message">No current position selected</string>
     <string name="max_distance_label">Max Distance:</string>
     <string name="no_selected_node_message">No selected node</string>
+    <string name="display_markers_checkbox_label">Display Markers</string>
 </resources>
