--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,7 +187,7 @@
     <string name="map_node_color_label_2">Node color</string>
     <string name="map_node_radius_label_2">Node radius</string>
     <string name="map_node_selected_color_label_2">Node selection color</string>
-    <string name="map_node_selected_radius_label_2">Node selection radius</string>
+    <string name="map_node_selected_radius_label_2">Node selection extra radius</string>
     <string name="map_node_current_color_label_2">Current location marker color</string>
     <string name="map_path_color_label_2">Path color</string>
     <string name="map_search_area_color_label_2">Search area color</string>
