--- a/app/src/main/res/values-b+ru/strings.xml
+++ b/app/src/main/res/values-b+ru/strings.xml
@@ -112,4 +112,9 @@
     <string name="current_plan_none">Не выбран</string>
     <string name="list_button_label">Список</string>
     <string name="plan_button_label">План</string>
+    <string name="plan_title">План</string>
+    <string name="error_no_current_plan">Ошибка: План не выбран</string>
+    <string name="notes_button_label">Заметки</string>
+    <string name="constraints_button_label">Ограничения</string>
+    <string name="calendar_button_label">Календарь</string>
 </resources>
