Added schedule optimization

--- a/app/src/main/res/values-b+ru/strings.xml
+++ b/app/src/main/res/values-b+ru/strings.xml
@@ -160,6 +160,7 @@
     <string name="map_empty_node">Узел</string>
     <string name="title_add_location">Добавить локацию</string>
     <string name="title_edit_location">Изменить локацию</string>
+    <string name="schedule_title">Расписание</string>
     <string-array name="data_titles">
         <item>Предметы</item>
         <item>Типы</item>
